[package]
name = "r2d2_mysql"
version = "9.0.0"
authors = ["outersky <outersky@gmail.com>"]
license = "MIT"
documentation = "http://outersky.github.io/r2d2-mysql/doc/v0.2.0/r2d2_mysql"
description = "MySQL support for the r2d2 connection pool"
repository = "https://github.com/outersky/r2d2-mysql"
keywords = ["mysql", "sql", "pool", "database","r2d2"]


[dependencies]
rustc-serialize = "0.3.24"
r2d2 = "0.8.2"
mysql = "14"


