[package]
name = "r2d2_mysql"
version = "23.0.0"
authors = ["outersky <outersky@gmail.com>"]
license = "MIT"
description = "MySQL support for the r2d2 connection pool"
repository = "https://github.com/outersky/r2d2-mysql.git"
keywords = ["mysql", "sql", "pool", "database", "r2d2"]
edition = "2018"

[dependencies]
r2d2 = "0.8.9"
mysql = "23"
