[package]
name = "r2d2_mysql"
version = "26.0.0"
authors = ["outersky <outersky@gmail.com>"]
license = "MIT"
description = "MySQL support for the r2d2 connection pool"
repository = "https://github.com/outersky/r2d2-mysql"
keywords = ["mysql", "sql", "pool", "database", "r2d2"]
edition = "2021"
rust-version = "1.81"

[dependencies]
r2d2 = "0.8.9"
mysql = { version = "26", default-features = false, features = ["minimal"] }
